@@ -7,7 +7,8 @@
 (env-load "stage4/define-tree-filter.lisp")
 (env-load "stage4/destructive-arith.lisp")
 (env-load "stage4/intersect.lisp")
-(env-load "stage4/tail-p.lisp")
+(env-load "stage4/head.lisp")
+(env-load "stage4/tail.lisp")
 (env-load "stage4/repeat-while-changes.lisp")
 (env-load "stage4/expander.lisp")
 (env-load "stage4/macrolet.lisp")
@@ -26,7 +27,6 @@
 (env-load "stage4/sort.lisp")
 (env-load "stage4/split.lisp" :cl)
 (env-load "stage4/split.tests.lisp")
-(env-load "stage4/head-p.lisp")
 (env-load "stage4/trim.lisp")
 (env-load "stage4/trim.tests.lisp")
 (env-load "stage4/define-slot-setter.lisp")
