@@ -5,6 +5,7 @@ Changes of tre-0.7 relative to tre-0.6:
          error message.
   * JS: Methods are also available as functions whose
         identifier is ($ class-name "-" method-name).
+  * WITHOUT-HEAD, WITHOUT-TAIL: New functions.
 
 Changes of tre-0.6 relative to tre-0.5:
   * PHP: PROPERTY-NAMES fixed for associative arrays.
